Css/style.css
/* styling header and creating the crooked pattern for saul bass style */
@font-face {
  font-family: 'Vertigon';
  src: url('./../fonts/Vertigon.otf');

}



body {
  background-color: #f6f1ed;
  font-family: Helvetica, sans-serif;
  font-size: 1.3em;

}

header {
  filter: drop-shadow(10px 20px black);

}

.shapeContainer {
  max-height: 100px;
  font-size: 2.4em;
  height: 100vh;
  width: 100%;
  background-color: #cf4917;
  clip-path: polygon(0% 0%, 0% 100%, 12% 88%, 22% 92%, 30% 98%, 41% 93%, 53% 88%, 63% 93%, 76% 97%, 86% 91%, 100% 99%, 100% 74%, 100% 2%, 100% 0%);
}




/* menu/navigation styling */
.menu {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.menu li {
  border: 3px black dotted;
  font-size: 0.5rem;
  display: flex;
  font-size: 1.2rem;
  margin: 1rem;
  max-width: 8rem;
  width: 100%;
  max-height: 5rem;
  height: 100%;
  justify-content: center;
}

#home {
  border: none;
}

/* text */

.bodyText {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 700px;
  width: 100%;
  margin: 0 auto;
}

.greeting {
  font-family: 'Vertigon', 'Annie Use Your Telescope', cursive, Helvetica;
  font-size: 2em;
}

.something {

  text-align: justify;

}

